--- a/KIDDYKIDS.csproj
+++ b/KIDDYKIDS.csproj
@@ -197,6 +197,9 @@
   <ItemGroup>
     <Resource Include="Image\KIDDYKIDSIcone.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="KIDDYKIDSIcone.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\MaterialDesignThemes.4.8.0\build\MaterialDesignThemes.targets" Condition="Exists('packages\MaterialDesignThemes.4.8.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
